--- a/develop/blocks/authorization/authorization.scss
+++ b/develop/blocks/authorization/authorization.scss
@@ -1,4 +1,12 @@
 .authorization {
+    $this: &;
+
+    &.dark {
+        #{$this}__login {
+            color: #fff;
+        }
+    }
+
     &__login {
         position: relative;
         font-size: 13px;
