--- a/develop/jade/index.pug
+++ b/develop/jade/index.pug
@@ -7,6 +7,6 @@ doctype html
 html(lang='ru')
     +doc-header
     body
-        +main-header
+        +main-header('dark')
         div(style='background-color: darkgreen; height: 2000px')
         +doc-footer
