--- a/develop/blocks/hamburger/hamburger.pug
+++ b/develop/blocks/hamburger/hamburger.pug
@@ -1,6 +1,5 @@
 mixin hamburger(mod)
-    -var addClass = mod ? 'hamburger--' + mod : ''
-    +b.hamburger(class=addClass)
+    +b.hamburger(class=mod)
         +e.line
         +e.line
         +e.line
