--- a/develop/blocks/main-nav/main-nav.scss
+++ b/develop/blocks/main-nav/main-nav.scss
@@ -1,4 +1,21 @@
 .main-nav {
+    $this: &;
+
+    background-color: #202020;
+
+    &.dark {
+        #{$this}__link,
+        #{$this}__sublink {
+            color: #fff;
+
+            &:hover,
+            &:active,
+            &:focus {
+                color: $theme-color;
+            }
+        }
+    }
+
     &__list {
         padding: 32px 26px;
         margin: 0;
