--- a/develop/jade/template/header.pug
+++ b/develop/jade/template/header.pug
@@ -7,7 +7,7 @@ mixin doc-header()
         meta(name='keywords', content='')
         meta(content='IE=edge')&attributes({'http-equiv': "X-UA-Compatible"})
         meta(name='viewport', content='width=device-width, initial-scale=1')
-        title ПТКОР
+        title Aktivo reinvented
         link(rel='icon' type='image/png' href='/favicon_16.png' sizes='16x16')  
         link(rel='icon' type='image/png' href='/favicon_32.png' sizes='32x32')  
         link(rel='icon' type='image/png' href='/favicon_96.png' sizes='96x96')  
