rewrote dark theme with usage of css variables. IE11 => polyfilled

--- a/develop/blocks/authorization/authorization.pug
+++ b/develop/blocks/authorization/authorization.pug
@@ -1,5 +1,5 @@
-mixin authorization(theme)
-    +b.authorization(class=theme)
+mixin authorization()
+    +b.authorization
         if !loggedIn
             +e.A.login(href='#') Вход
         else
