--- a/develop/blocks/hamburger/hamburger.pug
+++ b/develop/blocks/hamburger/hamburger.pug
@@ -1,5 +1,5 @@
-mixin hamburger(mod)
-    +b.hamburger(class=mod)
+mixin hamburger()
+    +b.hamburger
         +e.line
         +e.line
         +e.line
