--- a/develop/blocks/main-header/main-header.pug
+++ b/develop/blocks/main-header/main-header.pug
@@ -1,5 +1,5 @@
-mixin main-header(theme = 'light')
-    +b.HEADER.main-header(class=theme)
+mixin main-header()
+    +b.HEADER.main-header
         +inner
             +e.inner
                 +e.A.logo&attributes(attributes)
