--- a/develop/scss/main.scss
+++ b/develop/scss/main.scss
@@ -13,4 +13,12 @@ body {
     &.modal-opened {
         overflow: hidden;
     }
+
+    --theme-background-color: #fff;
+    --theme-text-color: #000;
+
+    &[dark-theme] {
+        --theme-background-color: #202020;
+        --theme-text-color: #fff;
+    }
 }
