--- a/app/css/main.css
+++ b/app/css/main.css
@@ -392,14 +392,11 @@ td,
 th {
   padding: 0; }
 
-.authorization.dark .authorization__login {
-  color: #fff; }
-
 .authorization__login {
   position: relative;
   font-size: 13px;
   line-height: 1.5;
-  color: #000;
+  color: var(--theme-text-color);
   text-decoration: none;
   -webkit-transition: color 300ms ease;
   -moz-transition: color 300ms ease;
@@ -523,13 +520,12 @@ th {
   width: 18px; }
   .hamburger:hover {
     cursor: pointer; }
-  .hamburger.dark .hamburger__line {
-    background-color: #fff; }
 
 .hamburger__line {
   width: 100%;
   height: 1px;
-  background-color: #000;
+  background-color: var(--theme-text-color);
+  color: var(--theme-text-color);
   display: block;
   margin: 0 auto 4px;
   -webkit-transition: all 300ms ease;
@@ -564,15 +560,9 @@ th {
 .main-header {
   padding: 16px 0 28px;
   height: 75px;
-  color: #000;
-  border-bottom: 1px solid rgba(145, 145, 145, 0.2); }
-  .main-header.dark {
-    color: #fff;
-    background-color: #202020; }
-    .main-header.dark .main-header__navigation {
-      background-color: #202020; }
-    .main-header.dark .main-header__phone {
-      color: #fff; }
+  border-bottom: 1px solid rgba(145, 145, 145, 0.2);
+  background-color: var(--theme-background-color);
+  color: var(--theme-text-color); }
   .main-header__inner {
     display: -webkit-box;
     display: -moz-box;
@@ -596,7 +586,7 @@ th {
     font-size: 13px;
     line-height: 1.5;
     white-space: nowrap;
-    color: #000;
+    color: var(--theme-text-color);
     text-decoration: none;
     -webkit-transition: color 300ms ease;
     -moz-transition: color 300ms ease;
@@ -613,7 +603,7 @@ th {
     padding-bottom: 120px;
     left: 0;
     z-index: 1;
-    background-color: #fff;
+    background-color: var(--theme-background-color);
     overflow-y: auto;
     -webkit-transform: translateX(-100%);
        -moz-transform: translateX(-100%);
@@ -642,15 +632,7 @@ th {
     padding-bottom: 5px; }
 
 .main-nav {
-  background-color: #202020; }
-  .main-nav.dark .main-nav__link,
-  .main-nav.dark .main-nav__sublink {
-    color: #fff; }
-    .main-nav.dark .main-nav__link:hover, .main-nav.dark .main-nav__link:active, .main-nav.dark .main-nav__link:focus,
-    .main-nav.dark .main-nav__sublink:hover,
-    .main-nav.dark .main-nav__sublink:active,
-    .main-nav.dark .main-nav__sublink:focus {
-      color: #ffd729; }
+  background-color: var(--theme-background-color); }
   .main-nav__list {
     padding: 32px 26px;
     margin: 0;
@@ -659,7 +641,7 @@ th {
     margin-bottom: 16px; }
   .main-nav__link, .main-nav__sublink {
     font-size: 13px;
-    color: #000;
+    color: var(--theme-text-color);
     text-decoration: none;
     -webkit-transition: color 300ms ease;
     -moz-transition: color 300ms ease;
@@ -698,8 +680,13 @@ th {
 body {
   min-width: 320px;
   min-height: 100vh;
-  font-family: "Montserrat", Helvetica, Arial, sans-serif; }
+  font-family: "Montserrat", Helvetica, Arial, sans-serif;
+  --theme-background-color: #fff;
+  --theme-text-color: #000; }
   body.menu-opened, body.modal-opened {
     overflow: hidden; }
+  body[dark-theme] {
+    --theme-background-color: #202020;
+    --theme-text-color: #fff; }
 
 /*# sourceMappingURL=main.css.map */
