--- a/develop/blocks/hamburger/hamburger.scss
+++ b/develop/blocks/hamburger/hamburger.scss
@@ -5,18 +5,13 @@
     &:hover {
         cursor: pointer;
     }
-
-    &.dark {
-        .hamburger__line {
-            background-color: #fff;
-        }
-    }
 }
 
 .hamburger__line {
     width: 100%;
     height: 1px;
-    background-color: $text-color;
+    background-color: var(--theme-text-color);
+    color: var(--theme-text-color);
     display: block;
     margin: 0 auto 4px;
 
