--- a/develop/blocks/main-nav/main-nav.scss
+++ b/develop/blocks/main-nav/main-nav.scss
@@ -1,20 +1,5 @@
 .main-nav {
-    $this: &;
-
-    background-color: #202020;
-
-    &.dark {
-        #{$this}__link,
-        #{$this}__sublink {
-            color: #fff;
-
-            &:hover,
-            &:active,
-            &:focus {
-                color: $theme-color;
-            }
-        }
-    }
+    background-color: var(--theme-background-color);
 
     &__list {
         padding: 32px 26px;
@@ -29,7 +14,7 @@
     &__link,
     &__sublink {
         font-size: 13px;
-        color: $text-color;
+        color: var(--theme-text-color);
         text-decoration: none;
 
         transition: color 300ms ease;
