--- a/develop/blocks/inner/inner.scss
+++ b/develop/blocks/inner/inner.scss
@@ -1,8 +1,10 @@
 .inner {
     position: relative;
+
     width: 100%;
+    height: 100%;
     margin: 0 auto;
     min-width: 320px;
-    max-width: 1360px;
+    max-width: 1240px;
     padding: 0 20px;
 }
