--- a/develop/blocks/main-header/main-header.scss
+++ b/develop/blocks/main-header/main-header.scss
@@ -1,24 +1,25 @@
 .main-header {
     $this: &;
-
-    padding: 16px 0 28px;
     height: 75px;
 
-    
     border-bottom: 1px solid rgba(#919191, 0.2);
-    
+
     background-color: var(--theme-background-color);
     color: var(--theme-text-color);
 
     &__inner {
         display: flex;
-        align-items: flex-end;
+        align-items: center;
         height: 100%;
+        padding: 0 20px;
+        max-width: 1400px;
+        margin: 0 auto;
     }
 
     &__logo {
         display: block;
         width: 54px;
+        margin-bottom: 10px;
 
         img {
             display: block;
@@ -49,13 +50,12 @@
     &__navigation {
         position: fixed;
         top: 100px;
-        z-index: 1;
+        z-index: 100;
         top: 75px;
         width: 100%;
         height: 100%;
         padding-bottom: 120px;
         left: 0;
-        z-index: 1;
 
         background-color: var(--theme-background-color);
         overflow-y: auto;
@@ -80,12 +80,70 @@
 
             .authorization {
                 position: absolute;
-                right: 38px;
+                right: 20px;
             }
         }
     }
 
     &__hamburger {
         padding-bottom: 5px;
+    }
+}
+
+@media #{$laptop} {
+    .main-header {
+        &__logo {
+            width: 88px;
+            margin-bottom: 8px;
+        }
+
+        &__inner {
+            align-items: center;
+        }
+
+        &__hamburger {
+            display: none;
+        }
+
+        &__phone {
+            margin-left: 0;
+            margin-right: 40px;
+        }
+
+        &__navigation {
+            position: static;
+            width: auto;
+            padding: 0;
+            margin: 0;
+            height: auto;
+            margin-left: auto;
+            margin-right: 40px;
+            overflow: initial;
+
+            transform: none;
+        }
+
+        &__authorization {
+            &--desktop {
+                display: block;
+            }
+
+            &--mobile {
+                display: none;
+            }
+        }
+    }
+}
+
+@media #{$desktop} {
+    .main-header {
+    
+        &__phone {
+            margin-right: 60px;
+        }
+
+        &__navigation {
+            margin-right: 60px;
+        }
     }
 }
