--- a/develop/scss/includes/fonts.scss
+++ b/develop/scss/includes/fonts.scss
@@ -18,6 +18,15 @@
 
 @font-face {
     font-family: 'Montserrat';
+    font-weight: 500;
+    font-style: normal;
+    src: url('../fonts/Montserrat/Montserrat-500.woff2') format('woff2'),
+        url('../fonts/Montserrat/Montserrat-500.woff') format('woff');
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Montserrat';
     font-weight: 600;
     font-style: normal;
     src: url('../fonts/Montserrat/Montserrat-600.woff2') format('woff2'),
