logic and markup for profit-calc

--- a/develop/blocks/index-top/index-top.pug
+++ b/develop/blocks/index-top/index-top.pug
@@ -15,4 +15,4 @@ mixin index-top()
                         span.value активных инвесторов
                 +e.A.link.btn(href='#') Смотреть объекты
                 +e.slider
-                    //- +index-slider
+                    +index-slider
