--- a/develop/blocks/main-footer/main-footer.pug
+++ b/develop/blocks/main-footer/main-footer.pug
@@ -12,7 +12,7 @@ mixin main-footer()
                         +e.appeal-row
                             +e.appeal-block
                                 +e.appeal-input
-                                    +base-input('email', 'footerEmail', 'footer_email', true)
+                                    +base-input('email', 'footerEmail', 'footer_email', 'Введите e-mail', true)
                                 +e.P.appeal-tip Рассылка приходит раз в неделю
                             +e.BUTTON.appeal-submit.btn.btn--small(type='submit') Отправить
                     +e.socials
