--- a/develop/jade/index.pug
+++ b/develop/jade/index.pug
@@ -7,12 +7,11 @@ doctype html
 html(lang='ru')
     +doc-header
     body(dark-theme)
-        +main-header
+        //- +main-header
         .page
-            +grid
-            +index-top
-            div(style='background-color: #fff; height: 2000px; padding-top: 200px')
-                +inner
-        +main-footer
-            +grid
+            +lines
+            //- +index-top
+            +profit-calc
+        //- +main-footer
+            +lines
         +doc-footer
