--- a/develop/jade/template/footer.pug
+++ b/develop/jade/template/footer.pug
@@ -10,8 +10,9 @@ mixin doc-footer()
     script(src='libs/tooltips/popper.js')
     script(src='libs/tooltips/tooltip.js')
     script(src='libs/dropzone.js')
+    script(src='libs/nouislider/nouislider.js')
+    script(src='libs/nouislider/wNumb.js')
     //- script(src='libs/stickyfill.min.js')
-    script(src='libs/imageZoom.min.js')
 
     //- script(src='libs/lazyload.js')
     //- script(src='libs/select2/select2.min.js')
