--- a/develop/blocks/index-top/index-top.scss
+++ b/develop/blocks/index-top/index-top.scss
@@ -54,8 +54,6 @@
         height: 480px;
         width: 300px;
         margin-right: -20px;
-
-        background-color: teal;
     }
 }
 
@@ -81,6 +79,7 @@
         &__title {
             position: relative;
             z-index: 10;
+            top: -15px;
             grid-area: title;
 
             font-size: 50px;
@@ -102,8 +101,8 @@
         &__slider {
             position: relative;
             z-index: 0;
-            top: -145px;
-            width: 100%;
+            top: -150px;
+            width: 400px;
             height: 690px;
         }
     }
