--- a/develop/jade/template/header.pug
+++ b/develop/jade/template/header.pug
@@ -11,7 +11,7 @@ mixin doc-header()
         link(rel='icon' type='image/png' href='/favicon_16.png' sizes='16x16')  
         link(rel='icon' type='image/png' href='/favicon_32.png' sizes='32x32')  
         link(rel='icon' type='image/png' href='/favicon_96.png' sizes='96x96')  
-        meta(name="theme-color" content="#44a3a3")
+        meta(name="theme-color" content="#fed63f")
 
         block
 
@@ -19,10 +19,10 @@ mixin doc-header()
         link(href='libs/slick/slick.css', rel='stylesheet')
         link(href='libs/simpleBar/simplebar.css', rel='stylesheet')
         link(href='libs/fancybox/jquery.fancybox.css', rel='stylesheet')
+        link(href='libs/nouislider/nouislider.css', rel='stylesheet')
         //- link(href='libs/MagnificPopup/magnific-popup.css', rel='stylesheet')
         //- link(href='libs/dropzone.css', rel='stylesheet')
-        link(href='libs/modal-video-master/css/modal-video.min.css', rel='stylesheet')
-
+    
         //- link(href='libs/aos/aos.min.css', rel='stylesheet')
         //- link(href='libs/select2/select2.min.css', rel='stylesheet')
         //-link(href='libs/slick/slick-theme.css', rel='stylesheet')
