--- a/develop/jade/index.pug
+++ b/develop/jade/index.pug
@@ -7,11 +7,15 @@ doctype html
 html(lang='ru')
     +doc-header
     body(dark-theme)
-        //- +main-header
+        +main-header
         .page
             +lines
-            //- +index-top
+            +index-top
             +profit-calc
-        //- +main-footer
+            +advantages
+            +best-objects
+            +investment-steps
+            +index-bottom
+        +main-footer
             +lines
         +doc-footer
