--- a/develop/blocks/index-top/index-top.scss
+++ b/develop/blocks/index-top/index-top.scss
@@ -1,4 +1,6 @@
 .index-top {
+    padding-top: 75px;
+    margin-top: -75px;
     background-image: url(../images/index-top/bg.jpg);
     background-size: cover;
 
@@ -10,10 +12,6 @@
         position: relative;
         top: -6px;
         margin: 0 0 34px;
-
-        font-size: 28px;
-        font-weight: 600;
-        color: $text-color-white;
     }
 
     &__advantages {
@@ -28,21 +26,21 @@
         &:last-child {
             margin-bottom: 0;
         }
+    }
 
-        .title {
-            display: block;
+    &__advantage-title {
+        display: block;
 
-            font-size: 28px;
-            font-weight: 600;
-            color: $theme-color;
-        }
+        font-size: 14px;
+        color: $text-color-white;
+    }
 
-        .value {
-            display: block;
+    &__advantage-value {
+        display: block;
 
-            font-size: 14px;
-            color: $text-color-white;
-        }
+        font-size: 28px;
+        font-weight: 600;
+        color: $theme-color;
     }
 
     &__link {
@@ -59,6 +57,76 @@
 
 @media #{$tablet} {
     .index-top {
+        &__wrapper {
+            padding-top: 100px;
+            display: grid;
+            grid-template-areas:
+                'title title advantages'
+                'slider link advantages'
+                'slider . advantages';
+            grid-template-columns: repeat(3, 33.33%);
+            grid-template-rows: repeat(4, auto);
+
+            margin-bottom: -335px;
+        }
+
+        &__title {
+            grid-area: title;
+            position: relative;
+            z-index: 10;
+            top: -5px;
+            margin-bottom: 20px;
+
+            font-size: 32px;
+            text-align: right;
+        }
+
+        &__advantages {
+            grid-area: advantages;
+            padding-left: 17px;
+        }
+
+        &__link {
+            grid-area: link;
+            position: relative;
+            z-index: 2;
+            width: auto;
+            align-self: start;
+            justify-self: end;
+            padding-left: 24px;
+            padding-right: 24px;
+        }
+
+        &__slider {
+            grid-area: slider;
+            position: relative;
+            z-index: 1;
+            width: 100%;
+            min-width: 300px;
+            height: 560px;
+            margin-right: 0;
+            top: -90px;
+        }
+    }
+}
+
+@media #{$laptop} {
+    .index-top {
+        &__title {
+            top: -10px;
+        }
+
+        &__advantages {
+            padding-left: 32px;
+        }
+
+        &__advantage-value {
+            font-size: 30px;
+        }
+
+        &__link {
+            width: 100%;
+        }
     }
 }
 
@@ -66,43 +134,31 @@
     .index-top {
         &__wrapper {
             padding-top: 115px;
-            display: grid;
-            grid-template-areas:
-                'title title advantages'
-                'slider link advantages'
-                'slider . advantages';
-            grid-template-columns: repeat(3, 1fr);
-            grid-template-rows: repeat(4, auto);
-
             margin-bottom: -375px;
+
+            grid-template-columns: 400px 360px 400px;
         }
+
         &__title {
-            position: relative;
-            z-index: 10;
             top: -15px;
-            grid-area: title;
 
             font-size: 50px;
-            text-align: right;
         }
 
         &__advantages {
-            grid-area: advantages;
             padding-left: 50px;
         }
 
+        &__advantage-value {
+            font-size: 34px;
+        }
+
         &__link {
-            grid-area: link;
             width: 290px;
-            align-self: start;
-            justify-self: end;
         }
 
         &__slider {
-            position: relative;
-            z-index: 0;
-            top: -150px;
-            width: 400px;
+            top: -135px;
             height: 690px;
         }
     }
