--- a/develop/blocks/main-footer/main-footer.scss
+++ b/develop/blocks/main-footer/main-footer.scss
@@ -1,5 +1,7 @@
 .main-footer {
     position: relative;
+    z-index: 10;
+    background-color: #fff;
     &__inner {
         padding-top: 45px;
         padding-bottom: 45px;
@@ -18,7 +20,7 @@
     }
 
     &__appeal-block {
-        margin-bottom: 10px;
+        margin-bottom: 30px;
     }
 
     &__appeal-tip {
@@ -44,23 +46,34 @@
         height: 32px;
         margin-right: 5px;
         border-radius: 50%;
-
-        background-color: $text-color-light;
     }
 
     &__socials-link {
         position: relative;
         display: block;
+        width: 100%;
+        height: 100%;
 
         svg {
             @include svg-icon;
+
+            fill: #ccc;
+            transition: fill 300ms ease;
+        }
+
+        &:hover,
+        &:active,
+        &:focus {
+            svg {
+                fill: $theme-color;
+            }
         }
     }
 }
 
 @media #{$tablet} {
     .main-footer {
-        .grid {
+        .lines {
             .line,
             &::after {
                 display: none;
@@ -90,12 +103,34 @@
         }
 
         &__col {
-            width: 63%;
+            width: 68%;
 
             &:last-child {
-                width: 37%;
+                width: 32%;
                 padding-left: 25px;
+                margin-left: auto;
             }
+        }
+    }
+}
+
+@media #{$desktop} {
+    .main-footer {
+        &__title {
+            margin-bottom: 20px;
+        }
+
+        &__col {
+            width: 62%;
+
+            &:last-child {
+                width: 38%;
+                padding-left: 40px;
+            }
+        }
+
+        &__appeal {
+            margin-bottom: 35px;
         }
 
         &__appeal-row {
@@ -115,16 +150,7 @@
 
         &__appeal-submit {
             flex: 0 0 auto;
-        }
-    }
-}
-
-@media #{$desktop} {
-    .main-footer {
-        &__col {
-            &:last-child {
-                padding-left: 50px;
-            }
+            margin-top: 3px;
         }
     }
 }
