--- a/develop/blocks/main-header/main-header.scss
+++ b/develop/blocks/main-header/main-header.scss
@@ -1,10 +1,12 @@
 .main-header {
     $this: &;
     height: 75px;
+    position: relative;
+    z-index: 99;
 
     border-bottom: 1px solid rgba(#919191, 0.2);
 
-    background-color: var(--theme-background-color);
+    background-color: transparent;
     color: var(--theme-text-color);
 
     &__inner {
@@ -92,9 +94,14 @@
 
 @media #{$laptop} {
     .main-header {
+        &__inner {
+            padding: 0 35px;
+        }
+
         &__logo {
             width: 88px;
             margin-bottom: 8px;
+            margin-right: 20px;
         }
 
         &__inner {
@@ -107,7 +114,7 @@
 
         &__phone {
             margin-left: 0;
-            margin-right: 40px;
+            margin-right: 25px;
         }
 
         &__navigation {
@@ -121,6 +128,7 @@
             overflow: initial;
 
             transform: none;
+            background-color: transparent;
         }
 
         &__authorization {
@@ -137,7 +145,9 @@
 
 @media #{$desktop} {
     .main-header {
-    
+        &__inner {
+            padding: 0 15px;
+        }
         &__phone {
             margin-right: 60px;
         }
