--- a/develop/blocks/main-nav/main-nav.scss
+++ b/develop/blocks/main-nav/main-nav.scss
@@ -1,5 +1,5 @@
 .main-nav {
-    background-color: var(--theme-background-color);
+    // background-color: var(--theme-background-color);
 
     &__list {
         padding: 32px 24px;
