--- a/develop/blocks/profit-calc/profit-calc.scss
+++ b/develop/blocks/profit-calc/profit-calc.scss
@@ -4,9 +4,6 @@
 
     overflow: hidden;
 
-    max-width: 375px;
-    margin: 0 auto;
-
     &__text {
         position: relative;
         padding-left: 115px;
@@ -77,14 +74,55 @@
     &__investment-range {
         position: absolute;
         width: 100%;
-        height: 100px;
+        height: 100%;
         left: 0;
         top: 0;
+    }
 
+    &__investment-data {
+        position: absolute;
+        left: 20px;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+
+    &__investment-label {
+        font-size: 14px;
+        line-height: 1.6;
+    }
+
+    &__investment-value {
+        font-size: 28px;
+        font-weight: 600;
+        line-height: 1;
+    }
+
+    &__objects {
+        position: relative;
+        z-index: 1;
+        width: calc(100% + 40px);
+        margin-left: -20px;
+
+        height: 506px;
+        overflow: hidden;
+    }
+
+    &__income-range {
+        position: absolute;
+        width: 100%;
+        height: auto;
+        left: 0;
+        top: 44px;
+        bottom: 115px;
+    }
+
+    &__investment-range,
+    &__income-range {
         &.noUi-target {
             border: none;
             box-shadow: none;
             border-radius: 0;
+            background: none;
         }
 
         .noUi-connects {
@@ -156,113 +194,9 @@
         }
     }
 
-    &__investment-data {
-        position: absolute;
-        left: 20px;
-        top: 50%;
-        transform: translateY(-50%);
-    }
-
-    &__investment-label {
-        font-size: 14px;
-        line-height: 1.6;
-    }
-
-    &__investment-value {
-        font-size: 28px;
-        font-weight: 600;
-        line-height: 1;
-    }
-
-    &__objects {
-        position: relative;
-        width: calc(100% + 40px);
-        margin-left: -20px;
-
-        height: 506px;
-        overflow: hidden;
-    }
-
     &__income-range {
-        position: absolute;
-        width: 100%;
-        height: auto;
-        left: 0;
-        top: 44px;
-        bottom: 115px;
-
-        &.noUi-target {
-            border: none;
-            box-shadow: none;
-            border-radius: 0;
-        }
-
-        .noUi-connects {
-            border-radius: 0;
-        }
-
         .noUi-connect {
             background-color: transparent;
-        }
-
-        .noUi-origin {
-            height: 100%;
-        }
-
-        .noUi-connect,
-        .noUi-origin {
-            &.transition {
-                transition: transform 300ms ease;
-            }
-        }
-
-        .noUi-handle {
-            top: 0;
-            width: 74px;
-            right: -37px;
-            height: 100%;
-
-            background: none;
-            box-shadow: none;
-            border: none;
-            outline: none;
-
-            &::before,
-            &::after {
-                width: 0;
-                height: 0;
-
-                top: 50%;
-                left: 0;
-                transform: translateY(-50%);
-
-                border-top: 16px solid transparent;
-                border-bottom: 16px solid transparent;
-                border-right: 16px solid $theme-color;
-                background: none;
-            }
-
-            &::after {
-                right: 0;
-                left: auto;
-                transform: translateY(-50%) rotate(180deg);
-            }
-        }
-
-        .noUi-touch-area {
-            position: relative;
-            width: 100%;
-            height: 100%;
-
-            &::after {
-                content: '';
-                position: absolute;
-                width: 1px;
-                height: 100%;
-                left: 50%;
-
-                background-color: $theme-color;
-            }
         }
     }
 
@@ -289,6 +223,7 @@
 
             color: $text-color-white;
             opacity: 0.3;
+            font-weight: 600;
 
             transition: opacity 300ms ease;
 
@@ -326,25 +261,150 @@
 
         &__text {
             grid-area: text;
+            padding-left: 0;
+
+            font-size: 16px;
+        }
+
+        &__ruble-icon {
+            left: -130px;
         }
 
         &__title {
             grid-area: title;
             align-self: start;
+            position: relative;
+            top: -10px;
+            margin-bottom: 0;
+            height: 106px;
         }
 
         &__investment {
             grid-area: investment;
             height: 100%;
+            width: calc(100% + 35px);
+            margin-left: -35px;
+        }
+
+        &__investment-data {
+            left: 35px;
+            top: 205px;
+            transform: none;
+        }
+
+        &__investment-label {
+            margin-bottom: 10px;
+
+            font-size: 16px;
+            line-height: initial;
+        }
+
+        &__investment-value {
+            font-size: 30px;
+            line-height: initial;
+        }
+
+        &__investment-range,
+        &__income-range {
+            .noUi-handle {
+                cursor: col-resize;
+
+                &::before,
+                &::after {
+                    top: 65%;
+                }
+            }
+        }
+
+        &__investment-range {
+            &::after {
+                content: '';
+                position: absolute;
+                width: calc(100% - 35px);
+                height: 1px;
+                right: 0;
+                bottom: 0;
+
+                background-color: rgba(#919191, 0.2);
+            }
+        }
+
+        &__income-range {
+            top: 106px;
+            bottom: 0;
         }
 
         &__objects {
+            z-index: 10;
             grid-area: objects;
+            width: calc(100% + 35px);
+            margin-left: 0;
+            height: 684px;
+        }
+
+        &__objects-nav {
+            .slick-slide {
+                height: 106px;
+                padding-left: 45px;
+
+                font-size: 25px;
+                cursor: pointer;
+            }
+
+            &::after {
+                left: 0;
+            }
         }
     }
 }
 
 @media #{$desktop} {
     .profit-calc {
+        &__wrapper {
+            grid-template-columns: 400px 360px 400px;
+        }
+
+        &__title {
+            height: 120px;
+            left: -3px;
+            .title {
+                line-height: 1.1;
+            }
+        }
+
+        &__text {
+            max-width: 260px;
+        }
+
+        &__investment {
+            width: calc(100% + 120px);
+            margin-left: -120px;
+        }
+
+        &__investment-range {
+            &::after {
+                width: 100%
+            }
+        }
+
+        &__investment-data {
+            left: 120px;
+        }
+
+        &__objects {
+            width: calc(100% + 120px);
+            height: 684px;
+        }
+
+        &__objects-nav {
+            .slick-slide {
+                padding-left: 55px;
+                height: 120px;
+            }
+        }
+
+        &__income-range {
+            top: 120px;
+        }
     }
 }
