--- a/develop/blocks/profit-object/profit-object.scss
+++ b/develop/blocks/profit-object/profit-object.scss
@@ -46,7 +46,7 @@
         margin: 0 0 10px;
 
         font-size: 16px;
-        font-weight: 40;
+        font-weight: 400;
     }
 
     &__data-row {
@@ -101,7 +101,7 @@
         position: relative;
 
         font-size: 25px;
-        font-weight: 600;
+        font-weight: 500;
         color: $theme-color;
         text-decoration: none;
 
@@ -129,10 +129,32 @@
 
 @media #{$tablet} {
     .profit-object {
+        padding: 106px 40px 0;
+
+        &__footer {
+            height: 95px;
+
+            &::before {
+                display: none;
+            }
+        }
+
+        &__name {
+            display: none;
+        }
+
+        &__content {
+            margin-top: 205px;
+        }
+
+        &__data-value {
+            font-size: 30px;
+        }
     }
 }
 
 @media #{$desktop} {
     .profit-object {
+        padding: 120px 55px 0;
     }
 }
