--- a/develop/scss/main.scss
+++ b/develop/scss/main.scss
@@ -30,3 +30,40 @@ body {
         top: 75px;
     }
 }
+
+.tippy-popper {
+    max-width: 270px;
+}
+
+.tippy-tooltip {
+    padding: 8px 12px;
+
+    color: $text-color;
+    font-size: 12px;
+    text-align: center;
+
+    background-color: $theme-color;
+    border-radius: 8px;
+}
+
+.tippy-content {
+    padding: 0;
+}
+
+.tippy-tooltip[data-placement^='bottom'] > .tippy-svg-arrow {
+    top: -6px;
+}
+
+.tippy-svg-arrow {
+    position: absolute;
+    width: 13px;
+    height: 6px;
+
+    svg {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+    }
+}
