finished about page

--- a/develop/blocks/index-top/index-top.scss
+++ b/develop/blocks/index-top/index-top.scss
@@ -1,6 +1,8 @@
 .index-top {
     padding-top: 75px;
     margin-top: -75px;
+
+    background-color: #1b1b1b;
     background-image: url(../images/redesign/index-top/bg.jpg);
     background-size: cover;
 
