--- a/develop/jade/about-page.pug
+++ b/develop/jade/about-page.pug
@@ -9,13 +9,12 @@ html(lang='ru')
     body(theme='dark-theme')
         +main-header
         .page
-            +lines
-            +index-top
-            +profit-calc
-            +advantages
-            +best-objects
-            +investment-steps
-            +index-bottom
+            +lines('small-right')
+            +about-top
+            +about-history
+            +about-team
+            +about-partners
+            +about-smi
         +main-footer
             +lines
         +doc-footer
