--- a/develop/jade/partners-page.pug
+++ b/develop/jade/partners-page.pug
@@ -6,7 +6,7 @@ include ../blocks/**/*
 doctype html
 html(lang='ru')
     +doc-header
-    body(dark-theme)
+    body(theme='dark-theme')
         +main-header
         .page
             +partners-wrapper
